--- a/Pagina Informativa/index.html
+++ b/Pagina Informativa/index.html
@@ -24,6 +24,20 @@
             <img src="image/image1.jpg" alt="image1">
             <img src="image/image2.jpg" alt="image2">
         </div>
+        <div>
+            <h3>5G</h3>
+            <p>Pero con el 5G no solamente nos referimos a una mayor
+                velocidad en los teléfonos. Gran parte de las empresas de
+                las que dependemos diariamente evolucionarán con el 5G
+                para ofrecer nuevos servicios. También veremos avances en
+                el desarrollo de ciudades inteligentes, vehículos inteligentes
+                y numerosas tecnologías intensivas en IoT.
+            </p>
+            <h5>Luis Ovalle</h5>
+            <img src="image/pexels-kindel-media-8566529.jpg" alt="logo del robot">
+            <img src="image/pexels-thisisengineering-3913025.jpg" alt="robor mano">
+
+        </div>
     </main>
 </body>
 </html>
