--- a/Pagina Informativa/index.html
+++ b/Pagina Informativa/index.html
@@ -38,6 +38,19 @@
             <img src="image/pexels-thisisengineering-3913025.jpg" alt="robor mano">
 
         </div>
+
+        <div>
+            <h3>Virtualizacion de los datos</h2>
+            <p>La virtualización de los datos posibilita que las empresas los 
+                traten como si fueran como un suministro dinámico, ya que 
+                proporciona funciones de procesamiento que permiten reunir datos 
+                de varias fuentes, incorporar fuentes nuevas fácilmente y transformar 
+                los datos segun las necesidades de los usuarios.
+            </p>
+            <h5>Denilson Carreto<h5>
+            <img src="image/pexels-pixabay-247791.jpg" alt="image1">
+            <img src="image/pexels-michelangelo-buonarroti-8728556.jpg" alt="image2">
+        </div>
     </main>
 </body>
 </html>
