Actualizacion de estructura HTML implementando CSS

--- a/Pagina Informativa/index.html
+++ b/Pagina Informativa/index.html
@@ -1,56 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <header>
-        <h1>Tecnologia</h1>
-        <p>La revolución está aquí</p>
-    </header>
-
-    <main>
-        <div>
-            <h3>Inteligencia Artificial</h2>
-            <p>Se puede considerar a la IA como la capacidad de las máquinas para usar algoritmos, 
-                aprender de los datos y utilizar lo aprendido en la toma de decisiones tal y como 
-                lo haría un ser humano, además uno de los enfoques principales de la inteligencia
-                artificial es el aprendizaje automático.
-            </p>
-            <h5>Donald Abac</h5>
-            <img src="image/image1.jpg" alt="image1">
-            <img src="image/image2.jpg" alt="image2">
-        </div>
-        <div>
-            <h3>5G</h3>
-            <p>Pero con el 5G no solamente nos referimos a una mayor
-                velocidad en los teléfonos. Gran parte de las empresas de
-                las que dependemos diariamente evolucionarán con el 5G
-                para ofrecer nuevos servicios. También veremos avances en
-                el desarrollo de ciudades inteligentes, vehículos inteligentes
-                y numerosas tecnologías intensivas en IoT.
-            </p>
-            <h5>Luis Ovalle</h5>
-            <img src="image/pexels-kindel-media-8566529.jpg" alt="logo del robot">
-            <img src="image/pexels-thisisengineering-3913025.jpg" alt="robor mano">
-
-        </div>
-
-        <div>
-            <h3>Virtualizacion de los datos</h2>
-            <p>La virtualización de los datos posibilita que las empresas los 
-                traten como si fueran como un suministro dinámico, ya que 
-                proporciona funciones de procesamiento que permiten reunir datos 
-                de varias fuentes, incorporar fuentes nuevas fácilmente y transformar 
-                los datos segun las necesidades de los usuarios.
-            </p>
-            <h5>Denilson Carreto<h5>
-            <img src="image/pexels-pixabay-247791.jpg" alt="image1">
-            <img src="image/pexels-michelangelo-buonarroti-8728556.jpg" alt="image2">
-        </div>
-    </main>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="style/main.css">
+        <link rel="icon" type="icon/png" href="img/icon.png">
+        <title>Pagina Informativa - Compis Molonguis</title>
+    </head>
+    <body>
+        <center>
+            <div class=jumbotron_one>
+                <h1 class="title_one">Tecnologia</h1>
+                <p>La revolución está aquí</p>
+            </div>
+        </center>
+        <!-- Parte realizada por Donald Abac -->
+        <center>
+            <div class="jumbotron_two">
+                <section class="donald_text">
+                    <h2>Inteligencia Artificial</h2>
+                    <p>Se puede considerar a la IA como la capacidad de las máquinas para usar algoritmos, 
+                        aprender de los datos y utilizar lo aprendido en la toma de decisiones tal y como 
+                        lo haría un ser humano, además uno de los enfoques principales de la inteligencia
+                        artificial es el aprendizaje automático.</p>
+                    <h5>Donald Abac</h5>
+                </section>
+                <section class="donald_images">
+                    <img src="img/donaldImageOne.jpg">
+                    <img src="img/donaldImageTwo.jpg">
+                </section>
+            </div>
+        </center>
+        <!-- Parte realizada por Luis Ovalle -->
+        <center>
+            <div class="jumbotron_three">
+                <section class="luis_text">
+                    <h2>5G</h2>
+                    <p>Pero con el 5G no solamente nos referimos a una mayor
+                        velocidad en los teléfonos. Gran parte de las empresas de
+                        las que dependemos diariamente evolucionarán con el 5G
+                        para ofrecer nuevos servicios. También veremos avances en
+                        el desarrollo de ciudades inteligentes, vehículos inteligentes
+                        y numerosas tecnologías intensivas en IoT.</p>
+                    <h5>Luis Ovalle</h5>
+                </section>
+                <section class="luis_images">
+                    <img src="img/luisImageOne.jpg">
+                    <img src="img/luisImageTwo.jpg">
+                </section>
+            </div>
+        </center>
+        <!-- Parte realizada por Denilson Carreto -->
+        <center>
+            <div class="jumbotron_four">
+                <section class="denilson_text">
+                    <h2>Virtualización De Los Datos</h2>
+                    <p>La virtualización de los datos posibilita que las empresas los trates como si fueran un suministro dinámico, ya que proporciona funciones de procesamiento que permiten reunir datos de varias fuentes, incorporar fuentes nuevas fácilmente y transformar los datos según las necesidades de los usuarios</p>
+                    <h5>Denilson Carreto</h5>
+                </section>
+                <section class="denilson_images">
+                    <img src="img/dImage4.jpg">
+                    <img src="img/dImage5.jpg">
+                </section>
+            </div>
+        </center>
+    </body>
+    <footer>
+        <p>&copy;Compis Molonguis <br> Participantes del grupo: <br> Donald Abac, Luis Ovalle , Denilson Carreto, Daniel Juárez, Jimmy Tzoc</p>
+    </footer>
 </html>
